--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<img src="Images/лампа.png" class="last-item">
 					</div>
 					<div class="menu">
-						<a href="Pages/about.html" class="color-button">Donate:)</a>
+						<a href="https://www.donationalerts.com/r/ledinec_ming" class="color-button">Donate:)</a>
 						<img src='Images/graph.png' class="last-item">
 					</div>
 					<a href="Pages/docs.html" class="color-button">Help</a>
