--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<img src="Images/white0.png" class="last-item">
 					</div>
 					<div class="menu">
-						<a href="Pages/about.html" class="color-button">About</a>
+						<a href="Pages/cells.html" class="color-button">CELLS</a>
 						<img src="Images/лампа.png" class="last-item">
 					</div>
 					<div class="menu">
