--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -9,7 +9,7 @@
 	<ol>
 		<li class="list-item">Входное меню
 			<ul>
-				<li>Верхний ползунок отвечает за шляпу персонажа, их всего 6.</li>
+				<li>Верхний ползунок отвечает за шляпу персонажа, их всего 8.</li>
 				<li>Ползунок SIZE отвечает за размер мира ( максимальный размер 65к блоков! )</li>
 				<li>Поле Nickname отвечает за имя персонажа в игре</li>
 				<li>Кнопка play начнёт создание мира и игра начнётся</li>
@@ -67,6 +67,14 @@
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 5 штук</li>
 					<li>Деревянная кирка<img src="../Images/items3.png" alt="Деревянная кирка"> 1 штука</li>
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
+				</ul>
+			</div>
+			<div class='craft'>
+				<h3>Сундук</h3>
+				<ul>
+					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук</li>
+					<li>Рабочее место: не требуется</li>
+					<li>Хранилище: 9 слотов</li>
 				</ul>
 			</div>
 		</li>
