--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -70,7 +70,7 @@
 				</ul>
 			</div>
 			<div class='craft'>
-				<h3>Сундук</h3>
+				<h3>Сундук<img src='../Images/items8.png'</h3>
 				<ul>
 					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук</li>
 					<li>Рабочее место: не требуется</li>
