--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -9,7 +9,7 @@
 	<ol>
 		<li class="list-item">Входное меню
 			<ul>
-				<li>Верхний ползунок отвечает за шляпу персонажа, их всего 8.</li>
+				<li>Верхний ползунок отвечает за шляпу персонажа, их всего 6.</li>
 				<li>Ползунок SIZE отвечает за размер мира ( максимальный размер 65к блоков! )</li>
 				<li>Поле Nickname отвечает за имя персонажа в игре</li>
 				<li>Кнопка play начнёт создание мира и игра начнётся</li>
@@ -51,6 +51,7 @@
 				</ul>
 			</div>
 			<br>
+
 			<div class="craft">
 				<h3>Каменный топор<img src="../Images/items6.png" alt="Каменный топор"></h3>
 				<ul>
@@ -69,14 +70,34 @@
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
-			<div class='craft'>
-				<h3>Сундук<img src='../Images/items8.png'</h3>
+		</li>
+		<li class="list-item">Информация о добываемых объектах
+			<br>
+			<div class="craft">
+				<h3>Дерево<img src="../Images/builds30.png"></h3>
 				<ul>
-					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук</li>
-					<li>Рабочее место: не требуется</li>
-					<li>Хранилище: 9 слотов</li>
+					<li>Нужный инструмент: ничего/топор<img src="../Images/items2.png" alt="Деревянный топор"></li>
+					<li>Прочность: 20</li>
+					<li>Добыча: дерево<img src="../Images/items1.png" alt="Дерево"> 1 штука</li>
 				</ul>
 			</div>
+			<div class="craft">
+				<h3>Камень<img src="../Images/builds20.png"></h3>
+				<ul>
+					<li>Нужный инструмент: кирка<img src="../Images/items3.png" alt="Деревянная кирка"></li>
+					<li>Прочность: 30</li>
+					<li>Добыча: камень<img src="../Images/items4.png" alt="Камень"> 1 штука</li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Цветоутка<img src="../Images/builds10.png"></h3>
+				<ul>
+					<li>Нужный инструмент: ножницы</li>
+					<li>Прочность: 10</li>
+					<li>Добыча: нету</li>
+				</ul>
+			</div>
+
 		</li>
 	</ol>
 </body>
