--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -70,6 +70,21 @@
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
+			<div class='craft'>
+				<h3>Печка</h3>
+				<ul>
+					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
+					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Железный слиток</h3>
+				<ul>
+					<li>Уголь<img src="../Images/items13.png"> 1 штука</li>
+					<li>Железная руда <img src="../Images/items15.png"> 1 штука</li>
+					<li>Рабочее место: печка<img src="../Images/items14.png"></li>
+				</ul>
+			</div>
 		</li>
 		<li class="list-item">Информация о добываемых объектах
 			<br>
@@ -97,7 +112,14 @@
 					<li>Добыча: нету</li>
 				</ul>
 			</div>
-
+			<div class="craft">
+				<h3>Верстак<img src="../Images/builds40.png"></h3>
+				<ul>
+					<li>Нужный инструмент: ничего/топор<img src="../Images/items2.png" alt="Деревянный топор"></li>
+					<li>Прочность: 30</li>
+					<li>Добыча: верстак<img src="../Images/items4.png" alt="Верстак"> 1 штука</li>
+				</ul>
+			</div>
 		</li>
 	</ol>
 </body>
