--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -21,7 +21,7 @@
 				<li>Кнопка E на клавиатуре (английская) или USE на экране позволяет добывать, подойдите к дереву и зажмите кнопку E!</li>
 				<li>Чтобы поставить предмет используйте кнопку E, попробуйте сделать это с верстаком!</li>
 				<li>Хот-бар инвентаря находится снизу по середине экрана, для управления им можно использовать цифры от 1 до 0 на клавиатуре или можно нажимать по хот-бару на экране</li>
-				<li>В левом верхнем углу расположены крафты, чтобы создать предмет нажмите по нему!(Рецепты в следующей инструкции)</li>
+				<li>Когда у вас будет достаточно предметов для создания предмета, а так-же нужное рабочее место крафт будет отображен в левом верхнем углу нажмите на него для создания!(Рецепты в следующей инструкции)</li>
 			</ul>
 		</li>
 		<li class="list-item">Рецепты создания
