--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -30,7 +30,7 @@
 				<h3>Деревянный топор<img src="../Images/items2.png" alt="Деревянный топор"></h3>
 				<ul>
 					<li>
-						Дерево<img src="../Images/items1.png"> 10 штук
+						Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук
 					</li>
 					<li>Рабочее место: не требуется</li>
 				</ul>
@@ -71,18 +71,38 @@
 				</ul>
 			</div>
 			<div class='craft'>
-				<h3>Печка</h3>
+				<h3>Печка<img src="../Images/items14.png" alt="Печка"></h3>
 				<ul>
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
 			<div class="craft">
-				<h3>Железный слиток</h3>
+				<h3>Железный слиток<img src="../Images/items16.png" alt="Железный слиток"></h3>
 				<ul>
-					<li>Уголь<img src="../Images/items13.png"> 1 штука</li>
-					<li>Железная руда <img src="../Images/items15.png"> 1 штука</li>
-					<li>Рабочее место: печка<img src="../Images/items14.png"></li>
+					<li>Уголь<img src="../Images/items13.png" alt="Уголь"> 1 штука</li>
+					<li>Железная руда <img src="../Images/items15.png" alt="Железная руда"> 1 штука</li>
+					<li>Рабочее место: Печка<img src="../Images/items14.png" alt="Печка"></li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Железный топор<img src="../Images/items9.png" alt="Железный топор"></h3>
+				<ul>
+					<li>Каменный топор<img src="../Images/items6.png" alt="Каменный топор"></li>
+					<li>Железный слиток<img src="../Images/items16.png" alt="Железный слиток"> 5 штук</li>
+					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
+					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 20 штук</li>
+					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Железная кирка<img src="../Images/items10.png" alt="Железная кирка"></h3>
+				<ul>
+					<li>Каменная кирка<img src="../Images/items7.png" alt="Каменная кирка"></li>
+					<li>Железный слиток<img src="../Images/items16.png" alt="Железный слиток"> 5 штук</li>
+					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
+					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 20 штук</li>
+					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
 		</li>
@@ -117,7 +137,15 @@
 				<ul>
 					<li>Нужный инструмент: ничего/топор<img src="../Images/items2.png" alt="Деревянный топор"></li>
 					<li>Прочность: 30</li>
-					<li>Добыча: верстак<img src="../Images/items4.png" alt="Верстак"> 1 штука</li>
+					<li>Добыча: верстак<img src="../Images/items5.png" alt="Верстак"> 1 штука</li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Сундук<img src="../Images/builds60.png"></h3>
+				<ul>
+					<li>Нужный инструмент: ничего/топор<img src="../Images/items2.png" alt="Деревянный топор"></li>
+					<li>Прочность: 30</li>
+					<li>Добыча: сундук<img src="../Images/items8.png" alt="Сундук"> 1 штука</li>
 				</ul>
 			</div>
 		</li>
