--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -29,9 +29,8 @@
 			<div class="craft">
 				<h3>Деревянный топор<img src="../Images/items2.png" alt="Деревянный топор"></h3>
 				<ul>
-					<li>
-						Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук
-					</li>
+					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук</li>
+					<li>Сила удара: 2</li>
 					<li>Рабочее место: не требуется</li>
 				</ul>
 			</div>
@@ -40,6 +39,7 @@
 				<ul>
 					<li>Дерево<img src="../Images/items1.png"> 10 штук
 					</li>
+					<li>Сила удара: 1</li>
 					<li>Рабочее место: не требуется</li>
 				</ul>
 			</div>
@@ -58,6 +58,7 @@
 					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 15 штук</li>
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 5 штук</li>
 					<li>Деревянный топор<img src="../Images/items2.png" alt="Деревянный топор"> 1 штука</li>
+					<li>Сила удара: 3</li>
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
@@ -67,6 +68,7 @@
 					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 15 штук</li>
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 5 штук</li>
 					<li>Деревянная кирка<img src="../Images/items3.png" alt="Деревянная кирка"> 1 штука</li>
+					<li>Сила удара: 2</li>
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
@@ -92,6 +94,7 @@
 					<li>Железный слиток<img src="../Images/items16.png" alt="Железный слиток"> 5 штук</li>
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
 					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 20 штук</li>
+					<li>Сила удара: 4</li>
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
@@ -102,6 +105,7 @@
 					<li>Железный слиток<img src="../Images/items16.png" alt="Железный слиток"> 5 штук</li>
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
 					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 20 штук</li>
+					<li>Сила удара: 3</li>
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
@@ -130,6 +134,24 @@
 					<li>Нужный инструмент: ножницы</li>
 					<li>Прочность: 10</li>
 					<li>Добыча: нету</li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Железная руда<img src="../Images/builds70.png"></h3>
+				<ul>
+					<li>Нужный инструмент: кирка<img src="../Images/items7.png" alt="Каменная кирка"></li>
+					<li>Минимальная сила удара инструмента: 2(<img src="../Images/items7.png" alt="Каменная кирка">)</li>
+					<li>Прочность: 40</li>
+					<li>Добыча: железная руда<img src="../Images/items15.png"> 1 штука</li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Каменный уголь<img src="../Images/builds80.png"></h3>
+				<ul>
+					<li>Нужный инструмент: кирка<img src="../Images/items7.png" alt="Каменная кирка"></li>
+					<li>Минимальная сила удара инструмента: 2(<img src="../Images/items7.png" alt="Каменная кирка">)</li>
+					<li>Прочность: 40</li>
+					<li>Добыча: уголь<img src="../Images/items13.png"> 1 штука</li>
 				</ul>
 			</div>
 			<div class="craft">
