--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
 			</div>
 		</nav>
 	</header>
-	<h1 class="centered h1">What is Tea Survival?</h1>
+	<h1 class="centered h1">Tea Survival</h1>
+	<div class="ask">Что такое Tea Survival?</div>
+	<div class="answer">Tea Survival - игра про выживание.</div>
+	<div class="ask">Как я могу сыграть?</div>
+	<div class="answer">В браузере на компьютере, нажав кнопку play</div>
+	<div class="ask">Могу ли я сыграть на телефоне?</div>
+	<div class="answer">Для этого нужно установить арк эмулятор, он есть на нашем дискорд сервере.</div>
+	<div class="ask">В игре есть мультиплеер?</div>
+	<div class="answer">Денег нет, но вы держитесь, всем железа...</div>
 </body>
 </html>
 <script type="text/javascript">
@@ -45,7 +53,16 @@
 		background-color: black;
 		color: white;
 	}
-
+  .ask {
+    margin-top: 50px;
+    border: 1px solid white;
+    font-size: 200%;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+  }
+  .answer {
+    font-size: 120%;
+  }
 	.color-button {
 		text-decoration: none;
 		color: black;
@@ -88,7 +105,6 @@
 
     margin: 0;
     position: absolute;
-    top: 50%;
     left: 50%;
     margin-right: -50%;
     transition-property: width, height, font-size;
