--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -158,6 +158,7 @@
 				<h3>Верстак<img src="../Images/builds40.png"></h3>
 				<ul>
 					<li>Нужный инструмент: ничего/топор<img src="../Images/items2.png" alt="Деревянный топор"></li>
+					<li>Является рабочим местом</li>
 					<li>Прочность: 30</li>
 					<li>Добыча: верстак<img src="../Images/items5.png" alt="Верстак"> 1 штука</li>
 				</ul>
@@ -167,7 +168,17 @@
 				<ul>
 					<li>Нужный инструмент: ничего/топор<img src="../Images/items2.png" alt="Деревянный топор"></li>
 					<li>Прочность: 30</li>
+					<li>Хранилище 9 слотов</li>
 					<li>Добыча: сундук<img src="../Images/items8.png" alt="Сундук"> 1 штука</li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Печка<img src="../Images/builds90.png"></h3>
+				<ul>
+					<li>Нужный инструмент: кирка<img src="../Images/items3.png" alt="Деревянная кирка"></li>
+					<li>Является рабочим местом</li>
+					<li>Прочность: 50</li>
+					<li>Добыча: печка<img src="../Images/items14.png" alt="Верстак"> 1 штука</li>
 				</ul>
 			</div>
 		</li>
