--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -88,6 +88,13 @@
 				</ul>
 			</div>
 			<div class="craft">
+			  <h3>Наковальня<img src="../Images/items17.png"></h3>
+			  <ul>
+			  	  <li>Железный слиток<img src="../Images/items16.png"> 10 штук</li>
+			  	  <li>Рабочее место: Верстак<img src="../Images/items5.png"></li>
+			  </ul>
+			</div>
+			<div class="craft">
 				<h3>Железный топор<img src="../Images/items9.png" alt="Железный топор"></h3>
 				<ul>
 					<li>Каменный топор<img src="../Images/items6.png" alt="Каменный топор"></li>
@@ -95,7 +102,7 @@
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
 					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 20 штук</li>
 					<li>Сила удара: 4</li>
-					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
+					<li>Рабочее место: Наковальня<img src="../Images/items17.png" alt="Наковальня"></li>
 				</ul>
 			</div>
 			<div class="craft">
@@ -106,7 +113,7 @@
 					<li>Камень<img src="../Images/items4.png" alt="Камень"> 10 штук</li>
 					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 20 штук</li>
 					<li>Сила удара: 3</li>
-					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
+					<li>Рабочее место: Наковальня<img src="../Images/items17.png" alt="Наковальня"></li>
 				</ul>
 			</div>
 		</li>
