--- a/Pages/game.html
+++ b/Pages/game.html
@@ -4,19 +4,21 @@
     <link rel="SHORTCUT ICON" href="../Images/white0.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Tea Survival</title>
     <link rel="stylesheet" href="game.css" type="text/css"/>
   </head>
   <div id="content">
       <div id='start'>
         <div style="">
-         	<img id="img-hat" style="top:0%; left:50%; background-image:url('../Images/white0.png');">
+          	<img id="img-hat" style="top:0%;background-image:url('../Images/white0.png');" class="centered">
+          	<span class="centered" id="size-text" style="top:128px;">?</span>
           <button onclick="start();">Play</button>
-          <input type="range" min='4' max='12' name="Size" id='size_pow' style="top:35%;" class="input centered">
-          <label class="centered" style="top:32%;" class="label">SIZE</label>
-          <input type="range" mib='0' max='7' name="Hat" id='hat' class="centered" style="top:30%;" onchange="document.getElementById('img-hat').src='../Images/hat'+document.getElementById('hat').value+'0'+'.png'">
-          <input type="text" name="Name" placeholder="Nickname" class="centered" id="name">
+          <input type="range" min='4' max='12' name="Size" id='size_pow' style="top:85%;" class="input centered" onchange="document.getElementById('size-text').innerHTML=2**document.getElementById('size_pow').value">
+          <label class="centered" style="top:82%;" class="label">SIZE</label>
+          <label class="centered" style="top:67%;">Hat</label>
+          <input type="range" mib='0' max='7' name="Hat" id='hat' class="centered" style="top:70%;" onchange="document.getElementById('img-hat').src='../Images/hat'+document.getElementById('hat').value+'0'+'.png'">
+          <input type="text" name="Name" placeholder="Nickname" class="centered" id="name">  
         </div>
       </div>
     <canvas id="field">Your browser do not support canvas</canvas>
