--- a/Pages/game.html
+++ b/Pages/game.html
@@ -12,7 +12,7 @@
       <div id='start'>
         <div style="">
           	<img id="img-hat" style="top:0%;background-image:url('../Images/white0.png');" class="centered">
-          	<span class="centered" id="size-text" style="top:128px;">?</span>
+          	<span class="centered" id="size-text" style="top:10%;">?</span>
           <button onclick="start();">Play</button>
           <input type="range" min='4' max='12' name="Size" id='size_pow' style="top:85%;" class="input centered" onchange="document.getElementById('size-text').innerHTML=2**document.getElementById('size_pow').value">
           <label class="centered" style="top:82%;" class="label">SIZE</label>
