--- a/Pages/game.html
+++ b/Pages/game.html
@@ -24,7 +24,7 @@
     <canvas id="field">Your browser do not support canvas</canvas>
   </div>
 </html>
-<script type="text/javascript" src="lol.js"></script>
+<script type="text/javascript" src="lol2.js"></script>
 <script type="text/javascript">
 				
 </script>
