--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<a href="https://discord.gg/6J4tugxNPx" class="color-button">Discord</a>
 						<img href="https://images-ext-2.discordapp.net/external/EqI6rTOQCj3_TX4IbuXi4wSaF1N99C_DuaOlhGeQWE0/%3Fsize%3D1024/https/cdn.discordapp.com/icons/769998488116527176/6773a3200bd3c7a238399aa7704cc512.webp?width=128&height=128" class="last-item">
 					</div>
-					<a href="Pages/authors.html">Authors</a>
+					<a href="Pages/authors.html" class="color-button">Authors</a>
 				</div>
 			</div>
 		</nav>
