--- a/authors.html
+++ b/authors.html
@@ -36,7 +36,7 @@
 	</header>
 	<div class="ask">Писал код<img src="../Images/ledinec.png"></div>
 	<div class="answer">Злой ledinec. Mingный.</div>
-	<div class="ask">Рисовал спрайты<img src="../Images/edit.png">Хороший Артем, а звезду на гитхаб не поставил:(</div>
+	<div class="ask">Рисовал спрайты<img src="../Images/edit.png">Хороший Артем, сделал библиотеку dbd_py для питона</div>
 	<div class="ask">Искал баги<img src="../Images/atom.png"</div>
 	<div class="answer">Чел размером с атом</div>
 </body>
