--- a/authors.html
+++ b/authors.html
@@ -34,11 +34,9 @@
 			</div>
 		</nav>
 	</header>
-	<div class="ask">Писал код<img src="../Images/ledinec.png"></div>
-	<div class="answer">Злой ledinec. Mingный.</div>
-	<div class="ask">Рисовал спрайты<img src="../Images/edit.png">Хороший Артем, рекламы не будет</div>
-	<div class="ask">Искал баги<img src="../Images/atom.png"</div>
-	<div class="answer">Чел размером с атом</div>
+	<div class="ask">Писал код<br><img src="../Images/ledinec.png" class="img"><br>Злой ledinec. Mingный.</div>
+	<div class="ask">Рисовал спрайты<br><img class="img" src="../Images/edit.png"><br>Хороший Артем, рекламы не будет</div>
+	<div class="ask">Искал баги<br><img src="../Images/atom.png" class="img"><br>Чел размером с атом</div>
 </body>
 </html>
 <script type="text/javascript">
@@ -110,5 +108,9 @@
  	.h1 {
  		color: lightblue;
  		font-size: 300%;
+ 	}
+ 	.img{
+ 	  width: 30%;
+ 	  height: 30%;
  	}
 </style>
