--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -9,7 +9,7 @@
 	<ol>
 		<li class="list-item">Входное меню
 			<ul>
-				<li>Верхний ползунок отвечает за шляпу персонажа, их всего 6.</li>
+				<li>Верхний ползунок отвечает за шляпу персонажа, их всего 8.</li>
 				<li>Ползунок SIZE отвечает за размер мира ( максимальный размер 65к блоков! )</li>
 				<li>Поле Nickname отвечает за имя персонажа в игре</li>
 				<li>Кнопка play начнёт создание мира и игра начнётся</li>
@@ -116,6 +116,15 @@
 					<li>Рабочее место: Наковальня<img src="../Images/items17.png" alt="Наковальня"></li>
 				</ul>
 			</div>
+			<div class="craft">
+				<h3>Ножницы<img src="../Images/items18.png"></h3>
+				<ul>
+					<li>Железный слиток<img src="../Images/items16.png" alt="Железный слиток"> 2 штуки</li>
+					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 4 штуки</li>
+					<li>Сила удара: 1</li>
+					<li>Рабочее место: Верстак<img src="../Images/items5.png"></li>
+				</ul>
+			</div>
 		</li>
 		<li class="list-item">Информация о добываемых объектах
 			<br>
@@ -138,9 +147,9 @@
 			<div class="craft">
 				<h3>Цветоутка<img src="../Images/builds10.png"></h3>
 				<ul>
-					<li>Нужный инструмент: ножницы</li>
+					<li>Нужный инструмент: ножницы<img src="../Images/items18.png"></li>
 					<li>Прочность: 10</li>
-					<li>Добыча: нету</li>
+					<li>Добыча: цветоутка<img src="../Images/items19.png"></li>
 				</ul>
 			</div>
 			<div class="craft">
