--- a/authors.html
+++ b/authors.html
@@ -35,7 +35,7 @@
 		</nav>
 	</header>
 	<div class="ask">Писал код<br><img src="../Images/ledinec.png" class="img"><br>Злой ledinec. Mingный.</div>
-	<div class="ask">Рисовал спрайты<br><img class="img" src="../Images/edit.png"><br>Хороший Артем, рекламы не будет</div>
+	<div class="ask">Рисовал спрайты<br><img class="img" src="../Images/edit.png"><br>Хороший Артем(EditedCocktail)</div>
 	<div class="ask">Искал баги<br><img src="../Images/atom.png" class="img"><br>Чел размером с атом</div>
 </body>
 </html>
