--- a/Pages/game.html
+++ b/Pages/game.html
@@ -18,7 +18,8 @@
           <label class="centered" style="top:82%;" class="label">SIZE</label>
           <label class="centered" style="top:67%;">Hat</label>
           <input type="range" mib='0' max='7' name="Hat" id='hat' class="centered" style="top:70%;" onchange="document.getElementById('img-hat').src='../Images/hat'+document.getElementById('hat').value+'0'+'.png'">
-          <input type="text" name="Name" placeholder="Nickname" class="centered" id="name">  
+          <input type="text" name="Name" placeholder="Nickname" class="centered" id="name"> 
+          <input type="text" name="Code" placeholder="Code" id='code' class="centered" style="top: 30%;"> 
         </div>
       </div>
     <canvas id="field">Your browser do not support canvas</canvas>
