--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -125,6 +125,33 @@
 					<li>Рабочее место: Верстак<img src="../Images/items5.png"></li>
 				</ul>
 			</div>
+			<div class="craft">
+				<h3>Каменная лопата<img src="../Images/items22.png"></h3>
+				<ul>
+					<li>
+						Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук
+					</li>
+					<li>
+						Камень<img src="../Images/items4.png" alt='Cumмень'> 5 штук
+					</li>
+					<li>Сила удара: 1</li>
+					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
+				</ul>
+			</div>
+			<div class="craft">
+		  	<h3>Железная лопата<img src="../Images/items23.png"></h3>
+				<ul>
+					<li>
+						Дерево<img src="../Images/items1.png" alt="Дерево"> 15 штук
+					</li>
+					<li>
+						Камень<img src="../Images/items4.png" alt='Cumмень'> 10 штук
+					</li>
+					<li>Железный слиток<img src="../Images/items16.png"> 5 штук</li>
+					<li>Сила удара: 2</li>
+					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
+				</ul>
+			</div>
 		</li>
 		<li class="list-item">Информация о добываемых объектах
 			<br>
@@ -195,6 +222,40 @@
 					<li>Является рабочим местом</li>
 					<li>Прочность: 50</li>
 					<li>Добыча: печка<img src="../Images/items14.png" alt="Верстак"> 1 штука</li>
+				</ul>
+			</div>
+			<div class='craft'>
+				<h3>Куст<img src="../Images/builds110.png"></h3>
+				<ul>
+					<li>Нужный инструмент: Лопата<img src="../Images/items22.png"></li>
+					<li>Время роста: 2 минуты</li>
+					<li>Добыча роста: Ягоды<img src="../Images/items20.png"> 3 штуки</li>
+					<li>Прочность: 30</li>
+					<li>Добыча:
+						<ul>
+							<li>Есть ягоды: Ягоды<img src="../Images/items20.png"> 2 штуки, куст<img src="../Images/items21.png"> 1 штука</li>
+							<li>
+								Нет ягод: куст<img src="../Images/items21.png"> 1 штука
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			<div class="craft">
+				<h3>Костёр<img src="../Images/builds16.png"></h3>
+				<ul>
+					<li>
+						Прочность: 30
+					</li>
+					<li>
+						Нужный интрумент: ничего/топор<img src="../Images/items2.png" alt="Деревянный топор">
+					</li>
+					<li>
+						Время затухания: 3 минуты
+					</li>
+					<li>
+						Добыча:
+					</li>
 				</ul>
 			</div>
 		</li>
