--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -254,7 +254,11 @@
 						Время затухания: 3 минуты
 					</li>
 					<li>
-						Добыча:
+						Добыча: 
+						<ul>
+							<li>Горит: 1 уголь<img src='../Images/items13.png'>, 2 дерева<img src='../Images/items1.png'></li>
+							<li>Потух: 2 угля<img src='../Images/items13.png'></li>
+						</ul>
 					</li>
 				</ul>
 			</div>
