--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -19,8 +19,10 @@
 			<ul>
 				<li>Используйте кнопки WASD для передвижения персонажа</li>
 				<li>Кнопка E на клавиатуре (английская) или USE на экране позволяет добывать, подойдите к дереву и зажмите кнопку E!</li>
+				<li>Кнопка F позволяет взаимодействовать с постройками, например собирать ягоды с куста или открывать сундук</liЮ
 				<li>Чтобы поставить предмет используйте кнопку E, попробуйте сделать это с верстаком!</li>
 				<li>Хот-бар инвентаря находится снизу по середине экрана, для управления им можно использовать цифры от 1 до 0 на клавиатуре или можно нажимать по хот-бару на экране</li>
+				<li>Слева от хот-бара инветаря находится показатель голода, чтобы есть нужно взять еду в руки и нажать E</li>
 				<li>Когда у вас будет достаточно предметов для создания предмета, а так-же нужное рабочее место крафт будет отображен в левом верхнем углу нажмите на него для создания!(Рецепты в следующей инструкции)</li>
 			</ul>
 		</li>
@@ -152,6 +154,30 @@
 					<li>Рабочее место: Верстак<img src="../Images/items5.png" alt="Верстак"></li>
 				</ul>
 			</div>
+			<div class='craft'>
+				<h3>Костёр<img src='../Images/items27.png'></h3>
+				<ul>
+					<li>Дерево<img src="../Images/items1.png" alt="Дерево"> 10 штук</li>
+					<li>Можно поставить</li>
+					<li>Рабочее место: не требуется</li>
+				</ul>
+			</div>
+			<div class='craft'>
+				<h3>Жаренный гриб<img src='../Images/items26.png'> </h3>
+				<ul>
+					<li>Сырой гриб<img src='../Images/items25.png'> 1 штука</li>
+					<li>Дерево<img src='../Images/items1.png'> 2 штуки</li>
+					<li>Рабочее место: костёр<img src="../Images/items27.png"></li>
+				</ul>
+			</div>
+			<div class='craft'>
+				<h3>Жаренные грибы<img src='../Images/items26.png'>4 штуки</h3>
+				<ul>
+					<li>Сырые грибы<img src='../Images25.png'> 4 штуки</li>
+					<li>Уголь<img src='../Images/items13.png'> 1 штука</li>
+					<li>Рабочее место: печка<img src='../Images/items14.png'></li>
+				</ul>
+			</div>
 		</li>
 		<li class="list-item">Информация о добываемых объектах
 			<br>
@@ -239,6 +265,7 @@
 							</li>
 						</ul>
 					</li>
+					<li>Является рабочим местом</li>
 				</ul>
 			</div>
 			<div class="craft">
