--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -19,7 +19,7 @@
 			<ul>
 				<li>Используйте кнопки WASD для передвижения персонажа</li>
 				<li>Кнопка E на клавиатуре (английская) или USE на экране позволяет добывать, подойдите к дереву и зажмите кнопку E!</li>
-				<li>Кнопка F позволяет взаимодействовать с постройками, например собирать ягоды с куста или открывать сундук</liЮ
+				<li>Кнопка F позволяет взаимодействовать с постройками, например собирать ягоды с куста или открывать сундук</li>
 				<li>Чтобы поставить предмет используйте кнопку E, попробуйте сделать это с верстаком!</li>
 				<li>Хот-бар инвентаря находится снизу по середине экрана, для управления им можно использовать цифры от 1 до 0 на клавиатуре или можно нажимать по хот-бару на экране</li>
 				<li>Слева от хот-бара инветаря находится показатель голода, чтобы есть нужно взять еду в руки и нажать E</li>
@@ -173,7 +173,7 @@
 			<div class='craft'>
 				<h3>Жаренные грибы<img src='../Images/items26.png'>4 штуки</h3>
 				<ul>
-					<li>Сырые грибы<img src='../Images25.png'> 4 штуки</li>
+					<li>Сырые грибы<img src='../Images/items25.png'> 4 штуки</li>
 					<li>Уголь<img src='../Images/items13.png'> 1 штука</li>
 					<li>Рабочее место: печка<img src='../Images/items14.png'></li>
 				</ul>
