--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
 				<div class="col-md-3 menus">
 					<div class="menu">
 						<a href="Pages/game.html" class="color-button first-item">Play</a>
-						<img src="Images/white0.png" class="last-item">
+						<img src="Images/white0.png" alt='Главный персонаж' class="last-item">
 					</div>
 					<div class="menu">
 						<a href="Pages/cells.html" class="color-button">CELLS</a>
-						<img src="Images/лампа.png" class="last-item">
+						<img src="Images/лампа.png" alt='Лампа' class="last-item">
 					</div>
 					<div class="menu">
 						<a href="https://www.donationalerts.com/r/ledinec_ming" class="color-button">Donate:)</a>
-						<img src='Images/graph.png' class="last-item">
+						<img src='Images/graph.png' alt='График' class="last-item">
 					</div>
 					<a href="Pages/docs.html" class="color-button">Help</a>
 					<div class="menu">
 						<a href="https://discord.gg/6J4tugxNPx" class="color-button">Discord</a>
-						<img href="https://images-ext-2.discordapp.net/external/EqI6rTOQCj3_TX4IbuXi4wSaF1N99C_DuaOlhGeQWE0/%3Fsize%3D1024/https/cdn.discordapp.com/icons/769998488116527176/6773a3200bd3c7a238399aa7704cc512.webp?width=128&height=128" class="last-item">
 					</div>
 					<a href="authors.html" class="color-button">Authors</a>
 				</div>
