--- a/authors.html
+++ b/authors.html
@@ -36,7 +36,7 @@
 	</header>
 	<div class="ask">Писал код<br><img src="../Images/ledinec.png" class="img"><br>Злой ledinec. Mingный.</div>
 	<div class="ask">Рисовал спрайты<br><img class="img" src="../Images/edit.png"><br>Хороший Артем(EditedCocktail)</div>
-	<div class="ask">Искал баги<br><img src="../Images/atom.png" class="img"><br>Чел размером с атом</div>
+	<div class="ask">Искал баги<br><img src="../Images/atom.png" class="img"><br>атом мало что могу сказать</div>
 </body>
 </html>
 <script type="text/javascript">
