--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -290,6 +290,22 @@
 				</ul>
 			</div>
 		</li>
+		<li class='list-item'>Информация о мобах
+			<div class='craft'>
+				<h3>Корофва<img src='../Images/mob00.png'></h3>
+				<ul>
+					<li>
+						Жизни: 10
+					</li>
+					<li>
+						Добыча: 
+						<ol>
+							<li>Мясо от 1 до 2<li>
+						<ol>
+					</li>
+				</ul>
+			</div>
+		</li>
 	</ol>
 </body>
 </html>
