--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -300,7 +300,7 @@
 					<li>
 						Добыча: 
 						<ol>
-							<li>Мясо от 1 до 2<li>
+							<li>Мясо<img src='../Images/items30.png'> от 1 до 2<li>
 						<ol>
 					</li>
 				</ul>
