--- a/Pages/docs.html
+++ b/Pages/docs.html
@@ -292,7 +292,7 @@
 		</li>
 		<li class='list-item'>Информация о мобах
 			<div class='craft'>
-				<h3>Корофва<img src='../Images/mob00.png'></h3>
+				<h3>Корофва<br><img src='../Images/mob00.png'></h3>
 				<ul>
 					<li>
 						Жизни: 10
@@ -301,7 +301,7 @@
 						Добыча: 
 						<ol>
 							<li>Мясо<img src='../Images/items30.png'> от 1 до 2<li>
-						<ol>
+						</ol>
 					</li>
 				</ul>
 			</div>
