Update and rename Pages/docs.html to Страницы/docs.html

--- a/Страницы/docs.html
+++ b/Страницы/docs.html
@@ -265,7 +265,6 @@
 							</li>
 						</ul>
 					</li>
-					<li>Является рабочим местом</li>
 				</ul>
 			</div>
 			<div class="craft">
@@ -301,11 +300,24 @@
 					<li>
 						Добыча: 
 						<ol>
-							<li>Мясо<img src='../Images/items30.png'> от 1 до 2<li>
+							<li>Мясо<img src='../Images/items30.png'> от 1 до 2</li>
 						</ol>
 					</li>
 				</ul>
 			</div>
+                        <div class='craft'>
+                                <h3>Офца<br><img src='../Images/mob10.png'></h3>
+                                <ul>
+					<li>
+						Жизни: 10
+					</li>
+					<li>
+						Добыча: 
+						<ol>
+							<li>Шерсть<img src='../Images/items35.png'> 1</li>
+						</ol>
+					</li>
+				</ul>
 		</li>
 	</ol>
 </body>
