--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 	</header>
 	<h1 class="centered h1">Tea Survival</h1>
 	<div class="ask">Что такое Tea Survival?</div>
-	<div class="answer">Tea Survival - игра про выживание.</div>
+	<div class="answer">Tea Survival - ЗАБРОШЕННАЯ игра про выживание.</div>
 	<div class="ask">Как я могу сыграть?</div>
 	<div class="answer">В браузере на компьютере, нажав кнопку play</div>
 	<div class="ask">Могу ли я сыграть на телефоне?</div>
 	<div class="answer">Для этого нужно установить арк эмулятор, он есть на нашем дискорд сервере.</div>
 	<div class="ask">В игре есть мультиплеер?</div>
-	<div class="answer">Денег нет, но вы держитесь, всем железа...</div>
+	<div class="answer">Обновление будет если рак на горе свистнет</div>
 </body>
 </html>
 <style type="text/css">
